# swarm-sim-engine

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/api/: graph.py  report.py  simulation.py  ws.py
backend/app/models/: project.py  task.py
backend/app/services/: agent_logic.py  graph_builder.py  graph_evolver.py  moment_generator.py  report_agent.py  retrieval_tools.py  sandbox_executor.py  sandbox_tool.py  simulation_config_generator.py  simulation_runner.py
backend/app/utils/: llm_client.py
backend/core/: __init__.py  config.py
backend/core/domain/: project.py  task.py
backend/core/endpoints/: graph.py  report.py  simulation.py
backend/core/engine/: graph_evolver.py  memory_retriever.py  moment_generator.py  ontology_generator.py  persona_cortex.py  profile_generator.py  report_agent.py  sandbox_tool.py  semantic_mesh_builder.py  swarm_orchestrator.py
backend/core/utils/: file_parser.py
backend/data_test/: sim_1_log.jsonl  sim_test_1_log.jsonl
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_graph_build.py  test_graph_upload.py  test_report_flow.py  test_simulation_run.py
backend/tests/integration/: test_end_to_end.py
backend/tests/models/: test_task_persistence.py
backend/tests/services/: test_ontology_generator.py  test_profile_generator.py  test_simulation_config_generator.py
docs/: demo-script.md
frontend/: .dockerignore  eslint.config.js  index.html  nginx.conf  package-lock.json  (+4 more)
(+27 files in other folders)
